[package]
name = "hid-io-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["debug", "web-colors", "system"] }
hid-io-client = { path = "../hid-io-core/hid-io-client" }
hid-client-stdout = { version = "0.1.0", path = "../hid-client-stdout" }
iced_futures = { version = "0.12.0", features = ["tokio"] }
