[package]
name    = "hid-io-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "e69e2c0ee89266fcabe272d991c7dd4150b02270", features = [
  "debug",
  "web-colors",
  "system",
  "tokio",
] }
hid-io-client = { path = "../hid-io-core/hid-io-client" }
hid-client-stdout = { version = "0.1.0", path = "../hid-client-stdout" }
# iced_futures = { version = "0.12.0", features = ["tokio"] }
iced_futures = { git = "https://github.com/iced-rs/iced", rev = "e69e2c0ee89266fcabe272d991c7dd4150b02270", features = [
  "tokio",
] }
chrono = "0.4.38"
capnp = { version = "0.14" }
rand = "0.8"
hid-io-core = { version = "^0.1.4", path = "../hid-io-core", default-features = false, features = [
  "api",
] }
hid-io-protocol = { version = "^0.1.4", path = "../hid-io-core/hid-io-protocol" }
tokio = { version = "1.18", features = [
  "net",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "process",
  "io-util",
] }
tokio-rustls = { version = "0.23" }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0.198", features = ["serde_derive"] }
serde_json = "1.0.116"
